--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,91 +8,128 @@
     <link rel="stylesheet" href="style.css">
     <title>Skywalker</title>
 </head>
+
 <body>
-    
-## Hi, my name is Anakin Skywalker
+    <main id="container">
 
-Analytical, goal oriented leader with proven track record in management and
-enforcement Space Fleet Operations or Frontend Development. Wide range of
-hands-on experience, including:
+        <header>
+        </header>
 
-- Large scale construction projects oversight
-- Advanced forms of mind control
-- Planetary scale demolitions operations
-- Fugitive recovery services
+        <h2>Hi, my name is Anakin Skywalker</h2>
 
-> Together we can rule the galaxy
+        <main id="tartalom">
+            <section>
+                Analytical, goal oriented leader with proven track record in management and
+                enforcement Space Fleet Operations or Frontend Development. Wide range of
+                hands-on experience, including:
 
-## Notable achievements
+                <ul>
+                    <li>Large scale construction projects oversight</li>
+                    <li>Advanced forms of mind control</li>
+                    <li>Planetary scale demolitions operations</li>
+                    <li>Fugitive recovery services</li>
+                </ul>
+            </section>
 
-### Designed, built and piloted a custom pod racer. 32 BBY Boonta Eve Classic Race Champion
+            <aside>
+                Together we can rule the galaxy
+            </aside>
 
-In my spare time at Waldâs Parts junk shop I designed and built a Class III open
-cockpit Podracer capable of 588 mph top speed. Went on to win the Boonta Eve
-Classic race in 32 BBY - first ever win by a human. Generated documented company
-revenue of over 59 wupiupi during the course of my enslavement.
+            <h2>Notable achievements</h2>
 
-### Oversight of DS1 and DS2 Orbital Battle Stations construction projects
+            <h3>Designed, built and piloted a custom pod racer. 32 BBY Boonta Eve Classic Race Champion</h3>
 
-During my tenure as a Supreme Imperial Fleet Commander I was in charge of large
-capital construction projects for the Deep Space Fleet. Performed acceptance
-testing of the DS1 SuperLaser in 0 BBY by annihilating Alderaan - a terrestrial
-class planet in the Core Worlds region. Successfully tripled the deep space fire
-power of the imperial fleet in accordance with the Tarkin Doctrine before losing
-both projects to run-away photon torpedoes.
+            <p>
+                In my spare time at Waldâs Parts junk shop I designed and built a Class III open
+                cockpit Podracer capable of 588 mph top speed. Went on to win the Boonta Eve
+                Classic race in 32 BBY - first ever win by a human. Generated documented company
+                revenue of over 59 wupiupi during the course of my enslavement.
+            </p>
 
-> I find your lack of faith disturbing.
+            <h3>Oversight of DS1 and DS2 Orbital Battle Stations construction projects</h3>
 
-## Experience
+            <p>
+                During my tenure as a Supreme Imperial Fleet Commander I was in charge of large
+                capital construction projects for the Deep Space Fleet. Performed acceptance
+                testing of the DS1 SuperLaser in 0 BBY by annihilating Alderaan - a terrestrial
+                class planet in the Core Worlds region. Successfully tripled the deep space fire
+                power of the imperial fleet in accordance with the Tarkin Doctrine before losing
+                both projects to run-away photon torpedoes.
+            </p>
 
-### Sith Empire Headquarters, Dromund Kaas
+            <aside>
+                I find your lack of faith disturbing.
+            </aside>
 
-Supreme Commander of Imperial Forces, Emperorâs Enforcer
+            <h2>Experience</h2>
 
-- As the right-hand man to Emperor Sidious, hunted down jedi survivors and
-  enforced the will of the empire;
-- Oversaw construction of the first generation Death Star;
-- First ever Imperial Supreme Commander;</li>
+            <h3>Sith Empire Headquarters, Dromund Kaas</h3>
 
-### Wallyâs Parts / Toyarian Watto junk shop, Mos Espa, Tatooine
+            <p>
+                Supreme Commander of Imperial Forces, Emperorâs Enforcer
+            </p>
 
-Enslaved Volunteer
+            <ul>
+                <li>As the right-hand man to Emperor Sidious, hunted down jedi survivors and
+                    enforced the will of the empire;</li>
+                <li>Oversaw construction of the first generation Death Star;</li>
+                <li>First ever Imperial Supreme Commander;</li>
+            </ul>
 
-- General help and front-desk retail operations at the junk shop, second hand
-  droid parts, mechanical / droid repair services;
-- Designed and piloted custom-built Podracer, ran track-side operations for the
-  podracing team;
+            <h3>Wallyâs Parts / Toyarian Watto junk shop, Mos Espa, Tatooine</h3>
 
-> When I left you, I was but the learner; now I am the master.
+            <p>Enslaved Volunteer</p>
 
-## Formal training
+            <ul>
+                <li>General help and front-desk retail operations at the junk shop, second hand
+                    droid parts, mechanical / droid repair services;</li>
+                <li>Designed and piloted custom-built Podracer, ran track-side operations for the
+                    podracing team;</li>
+            </ul>
 
-### Green Fox Academy, Earth
+            <aside>
+                When I left you, I was but the learner; now I am the master.
+            </aside>
 
-Full stack developer
+            <h2>Formal training</h2>
 
-- Padawan to Knight Tojas;
-- Learned programming with a specialisation in JavaScript and Front-end
-  technologies
+            <h3>Green Fox Academy, Earth</h3>
 
-### Sith Empire, Coruscant
+            <p>Full stack developer</p>
 
-Master of the Dark Side of the Force
+            <ul>
+                <li>Padawan to Knight Tojas;</li>
+                <li>Learned programming with a specialisation in JavaScript and Front-end
+                    technologies</li>
+            </ul>
 
-- Apprentice to Sith Lord Darth Sidious;
+            <h3>Sith Empire, Coruscant</h3>
 
-### Jedi Order Academy, Coruscant
+            <p>Master of the Dark Side of the Force</p>
 
-Master of Jedi Force
+            <ul>
+                <li>Apprentice to Sith Lord Darth Sidious;</li>
+            </ul>
 
-- Padawan to Knight Obi Wan Kenobi. Bodyguard to Senator Padme Amidala during
-  the Clone Wars of 22 BBY;
-- Graduated with donors;
+            <h3>Jedi Order Academy, Coruscant</h3>
 
-## Personal interests
+            <p>Master of Jedi Force</p>
 
-- Midi-Chlorian research as a hobby;
-- Recreational mind-control techniques;
-- Amateur and local club podracing.
+            <ul>
+                <li>Padawan to Knight Obi Wan Kenobi. Bodyguard to Senator Padme Amidala during
+                    the Clone Wars of 22 BBY;</li>
+                <li>Graduated with donors;</li>
+            </ul>
+
+            <h2>Personal interests</h2>
+
+            <ul>
+                <li>Midi-Chlorian research as a hobby;</li>
+                <li>Recreational mind-control techniques;</li>
+                <li>Amateur and local club podracing.</li>
+            </ul>
+        </main>
+    </main>
 </body>
+
 </html>
