--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Josefin+Sans:wght@100&family=Merriweather:wght@300&display=swap"
+        rel="stylesheet">
     <title>Skywalker</title>
 </head>
 
@@ -13,9 +18,11 @@
     <main id="container">
 
         <header>
+            <div id="koszonto">
+                <h2>Hi, my name is</h2>
+                <h1>Anakin Skywalker</h1>
+            </div>
         </header>
-
-        <h2>Hi, my name is Anakin Skywalker</h2>
 
         <main id="tartalom">
             <section>
@@ -32,6 +39,7 @@
             </section>
 
             <aside>
+                <div id="idezojel">"</div>
                 Together we can rule the galaxy
             </aside>
 
@@ -76,7 +84,7 @@
                 <li>First ever Imperial Supreme Commander;</li>
             </ul>
 
-            <h3>Wallyâs Parts / Toyarian Watto junk shop, Mos Espa, Tatooine</h3>
+            <h3>Wally's Parts / Toyarian Watto junk shop, Mos Espa, Tatooine</h3>
 
             <p>Enslaved Volunteer</p>
 
